--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ media/
 !**/migrations/__init__.py
 FunMan/FunMan/utils.py
 FunMan/authorization/utils.py
+
+
+docker-compose.yml
+*/postgres_data/
+FunMan/utils.py
