--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,12 @@ media/
 .vscode/
 .idea/
 .DS_Store
-**/migrations/
-!**/migrations/__init__.py
+# **/migrations/
+# !**/migrations/__init__.py
 FunMan/FunMan/utils.py
 FunMan/authorization/utils.py
+
+
+docker-compose.yml
+*/postgres_data/
+FunMan/utils.py
