--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==2.3.0
 Django==5.1.6
 django-allauth==65.5.0
 django-ckeditor==6.7.2
+django-environ==0.12.0
 django-heroku==0.3.1
 django-js-asset==3.0.1
 django-taggit==6.1.0
